Make behaviour of blank line inputs consistent in all frontends.
Inputting a blank line now always reinserts the previous input.